--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "generate:graphQLSchema": "PAYLOAD_CONFIG_PATH=src/payload/payload.config.ts payload generate:graphQLSchema",
     "lint": "eslint src",
     "lint:fix": "eslint --fix --ext .ts,.tsx src",
-    "payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload/payload.config.ts payload"
+    "payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload/payload.config.ts payload",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@payloadcms/bundler-webpack": "^1.0.0",
@@ -36,6 +38,7 @@
     "dotenv": "^8.2.0",
     "escape-html": "^1.0.3",
     "express": "^4.17.1",
+    "init": "^0.1.2",
     "next": "13.5.2",
     "payload": "^2.0.7",
     "payload-admin-bar": "^1.0.6",
@@ -44,11 +47,20 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "7.45.4",
     "react-router-dom": "5.3.4",
+    "storybook": "^7.6.9",
     "stripe": "^10.2.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.1.6",
     "@payloadcms/eslint-config": "^0.0.1",
+    "@storybook/addon-essentials": "^7.6.9",
+    "@storybook/addon-interactions": "^7.6.9",
+    "@storybook/addon-links": "^7.6.9",
+    "@storybook/addon-onboarding": "^1.0.10",
+    "@storybook/blocks": "^7.6.9",
+    "@storybook/nextjs": "^7.6.9",
+    "@storybook/react": "^7.6.9",
+    "@storybook/test": "^7.6.9",
     "@swc/core": "1.3.76",
     "@types/escape-html": "^1.0.2",
     "@types/express": "^4.17.9",
@@ -66,6 +78,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-storybook": "^0.6.15",
     "nodemon": "^2.0.6",
     "prettier": "^2.7.1",
     "slate": "0.91.4",
